--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: Tags
 layout: page
 description: keep hungry keep foolish
-header-img: "img/zhihu.jpg"
+header-img: "img/index.jpg"
 ---
 
 <!-- -->
