--- a/tags.html
+++ b/tags.html
@@ -1,3 +1,10 @@
+---
+title: Tags
+layout: default
+description: keep hungry keep foolish
+header-img: "img/zhihu.jpg"
+---
+
 <!-- Page Header -->
 <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
     <div class="container">
